welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: value changeCouleurBrosse
  changeCouleurBrosse(c)
  ^